--- a/alurapic/client/app/app.component.html
+++ b/alurapic/client/app/app.component.html
@@ -2,5 +2,5 @@
     <h1 class="text-center">Alurapic - Angular 2</h1>
 </div>
 <div class="container">
-   <img class="img-responsive center-block" src="https://www.google.com.br/search?q=leao&safe=off&tbm=isch&imgil=ZsgMvWczf7tz_M%253A%253BPT9uvRoONjp-tM%253Bhttp%25253A%25252F%25252Fwww.fatosdesconhecidos.com.br%25252Ftopicos%25252Fleao%25252F&source=iu&pf=m&fir=ZsgMvWczf7tz_M%253A%252CPT9uvRoONjp-tM%252C_&usg=__Q9tXNcYEDWuXlOVBs3MTpbBkYNc%3D" alt="leão">
+   <img class="img-responsive center-block" src="http://1.bp.blogspot.com/-VUTMh2x-FBw/UBcNGrX4MzI/AAAAAAAABGc/rYCtLkXXrJc/s1600/Render+-+Le%C3%A3o+Flamme.png" alt="leão">
 </div>
