--- a/alurapic/client/app/app.component.html
+++ b/alurapic/client/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="jumbotron">
-    <h1 class="text-center">Alurapic - Angular 2</h1>
-</div>
-<div class="container">
-    <div class="row">
-        <painel *ngFor="let foto of fotos" class="col-md-2" titulo="{{foto.titulo}}">
-            <foto url="{{foto.url}}" title="{{foto.titulo}}"></foto>
-        </painel>
-    </div>
-</div>
+<router-outlet></router-outlet>
