--- a/alurapic/client/app/listar/listar.component.html
+++ b/alurapic/client/app/listar/listar.component.html
@@ -11,13 +11,14 @@
                             Nova foto
                         </a>
                     </span>
+                    <input #titulo (keyup)="0" class="form-control" placeholder="filtrar pelo título da foto...">
                 </div>
             </form>
         </div> <!-- fim col-md-12 -->
     </div> <!-- fim row -->
     <br>
     <div class="row">
-        <painel *ngFor="let foto of fotos" class="col-md-2" titulo="{{foto.titulo}}">
+        <painel *ngFor="let foto of fotos | filtrarPorTitulo: titulo.value" class="col-md-2" titulo="{{foto.titulo | uppercase}}">
             <foto url="{{foto.url}}" title="{{foto.titulo}}"></foto>
         </painel>
     </div>
