--- a/alurapic/client/app/painel/painel.component.html
+++ b/alurapic/client/app/painel/painel.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-primary efeito">
     <div class="panel-heading">{{titulo}}</div>
     <div class="panel-body">
         <ng-content></ng-content>
