--- a/alurapic/client/app/listar/listar.component.html
+++ b/alurapic/client/app/listar/listar.component.html
@@ -22,7 +22,9 @@
     <br>
     <div class="row">
         <painel *ngFor="let foto of fotos | filtrarPorTitulo: titulo.value" class="col-md-2" titulo="{{foto.titulo | uppercase}}">
-            <foto url="{{foto.url}}" title="{{foto.titulo}}"></foto>
+            <a [routerLink]="['/cadastro', foto._id]">
+                <foto url="{{foto.url}}" title="{{foto.titulo}}"></foto>
+            </a>
             <button class="btn btn-danger btn-block" (click)="remove(foto)">Remover</button>
         </painel>
     </div>
